# ao-predict

./: .gitignore  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
docs/: api.md  architecture.md  cli.md  development.md  index.md  testing.md
docs/reference/analysis/: api.md
docs/reference/persistence/: store.md
docs/reference/simulation/: api.md  interfaces.md  runner.md  tiptop.md  validation.md
examples/: sample_tiptop.ini  simulate_tiptop_api.py  simulate_tiptop_cli.sh  simulate_tiptop_cli_example1.yaml  simulate_tiptop_cli_example2.csv  simulate_tiptop_cli_example2.yaml
scripts/: bootstrap.sh
src/ao_predict/: __init__.py  cli.py  utils.py
src/ao_predict/analysis/: __init__.py  _compose.py  _immutability.py  types.py
src/ao_predict/persistence/: __init__.py  store.py
src/ao_predict/simulation/: __init__.py  api.py  atm.py  base.py  config.py  helpers.py  interfaces.py  photometry.py  runner.py  schema.py  stats.py  tiptop.py  validation.py
tests/: helpers.py  mock_simulation.py  test_analysis_types.py  test_cli_simulate.py  test_import.py  test_persistence_runner.py  test_simulation_api.py  test_tiptop_simulation.py
