[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ao-predict"
version = "0.0.1"
description = "Adaptive optics surrogate modeling and TIPTOP batch simulation framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
authors = [
    {name = "Nelson V. Nunes", email = "nvnunes@yorku.ca"},
]
dependencies = [
    "numpy>=2.2.0",
    "h5py>=3.11.0",
    "PyYAML>=6.0",
    "astro-tiptop>=1.3.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.scripts]
ao-predict = "ao_predict.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ao_predict*"]
